--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node js/server.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "mariadb": "^3.0.0",
     "path": "^0.12.7",
     "socket.io": "^4.4.1"
   },
